# libsodium

src/libsodium/: Makefile.am
src/libsodium/sodium/: utils.c
